feat: add validated config module and database connection service

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
     "rootDir": "./src",
     "baseUrl": ".",
     "paths": {
+      "@/config": [
+        "src/main/config.ts"
+      ],
       "@/core/*": [
         "src/core/*"
       ],
