--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "drizzle-orm": "^0.44.3",
     "fastify": "^5.4.0",
-    "postgres": "^3.4.7"
+    "postgres": "^3.4.7",
+    "zod": "^4.0.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
