--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^3.0.2",
     "drizzle-orm": "^0.44.3",
     "fastify": "^5.4.0",
+    "jose": "^6.0.12",
     "postgres": "^3.4.7",
     "zod": "^4.0.13"
   },
