refactor: implement dependency injection with tsyringe

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,9 @@
       "@/main/*": [
         "src/main/*"
       ]
-    }
+    },
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": [
     "src"
