--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
+    "@faker-js/faker": "^9.9.0",
     "@types/node": "^24.1.0",
     "dotenv": "^17.2.1",
     "drizzle-kit": "^0.31.4",
