--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.14.0",
   "dependencies": {
+    "@fastify/jwt": "^9.1.0",
     "bcryptjs": "^3.0.2",
     "drizzle-orm": "^0.44.3",
     "fastify": "^5.4.0",
