--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/main/server.ts",
-    "test": "vitest"
+    "test": "vitest",
+    "test:unit": "vitest run '**/*.spec.ts'",
+    "test:integration": "vitest run '**/*.test.ts'"
   },
   "keywords": [],
   "author": "",
@@ -31,11 +33,13 @@
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
+    "execa": "^9.6.0",
     "pino-pretty": "^13.1.1",
     "prettier": "^3.6.2",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
+    "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
   }
 }
