--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -7,3 +7,8 @@ services:
       - POSTGRES_USER=docker
       - POSTGRES_PASSWORD=docker
       - POSTGRES_DB=turbo_recipes_test
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U docker -d turbo_recipes_test']
+      interval: 2s
+      timeout: 5s
+      retries: 10
