--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "dev": "tsx watch src/main/server.ts",
     "test": "vitest",
-    "test:unit": "vitest run --config ./vitest.config.unit.ts",
-    "test:unit:watch": "vitest --config ./vitest.config.unit.ts",
-    "test:integration": "TEST_ENV=integration vitest run --config ./vitest.config.integration.ts",
-    "test:integration:watch": "TEST_ENV=integration vitest --config ./vitest.config.integration.ts",
+    "test:unit": "TEST_ENV=unit vitest run",
+    "test:unit:watch": "TEST_ENV=unit vitest",
+    "test:integration": "TEST_ENV=integration vitest run",
+    "test:integration:watch": "TEST_ENV=integration vitest",
     "test:ci": "vitest run"
   },
   "keywords": [],
