--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.14.0",
+  "packageManager": "pnpm@10.15.0",
   "dependencies": {
     "@fastify/jwt": "^9.1.0",
+    "@react-email/components": "^0.5.1",
     "bcryptjs": "^3.0.2",
     "drizzle-orm": "^0.44.3",
     "fastify": "^5.4.0",
     "jose": "^6.0.12",
     "postgres": "^3.4.7",
+    "react": "^19.1.1",
     "reflect-metadata": "^0.2.2",
+    "resend": "^6.0.1",
     "tsyringe": "^4.10.0",
     "zod": "^4.0.13"
   },
@@ -31,6 +34,7 @@
     "@eslint/js": "^9.31.0",
     "@faker-js/faker": "^9.9.0",
     "@types/node": "^24.1.0",
+    "@types/react": "^19.1.10",
     "dotenv": "^17.2.1",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.31.0",
@@ -38,7 +42,9 @@
     "eslint-plugin-prettier": "^5.5.3",
     "execa": "^9.6.0",
     "pino-pretty": "^13.1.1",
+    "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "tailwindcss": "^3.4.17",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
