--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@fastify/jwt": "^9.1.0",
     "@react-email/components": "^0.5.1",
     "bcryptjs": "^3.0.2",
+    "bullmq": "^5.58.1",
     "drizzle-orm": "^0.44.3",
     "fastify": "^5.4.0",
+    "ioredis": "^5.7.0",
     "jose": "^6.0.12",
     "postgres": "^3.4.7",
     "react": "^19.1.1",
