ci: create Dockerfile to deploy project and add cd.yml to create a docker container

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node dist/main/server.js",
     "dev": "tsx watch src/main/server.ts",
     "worker": "tsx watch src/main/worker.ts",
     "test": "vitest",
