build: migrate from tsc to tsdown for robust bundling

--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "node dist/main/server.js",
-    "dev": "tsx watch src/main/server.ts",
-    "worker": "tsx watch src/main/worker.ts",
+    "build": "tsdown",
+    "start:dev": "tsx watch src/main/server.ts",
+    "start:prod": "node dist/server.js",
+    "worker:dev": "tsx watch src/main/worker.ts",
+    "worker:prod": "node dist/worker.js",
+    "lint": "eslint .",
     "test": "vitest",
     "test:unit": "TEST_ENV=unit vitest run",
     "test:unit:watch": "TEST_ENV=unit vitest",
@@ -53,6 +57,7 @@
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "tailwindcss": "^3.4.17",
+    "tsdown": "^0.14.2",
     "tsx": "^4.20.3",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
