chore: add db migration on deploy

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "build": "tsdown",
     "start": "node dist/server.js",
     "start:dev": "tsx watch src/main/server.ts",
+    "start:prod": "pnpm db:migrate && node dist/server.js",
     "worker": "node dist/worker.js",
     "worker:dev": "tsx watch src/main/worker.ts",
+    "db:migrate": "drizzle-kit migrate",
     "lint": "eslint .",
     "test": "vitest",
     "test:unit": "TEST_ENV=unit vitest run",
@@ -29,6 +31,7 @@
     "@react-email/components": "^0.5.1",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.58.1",
+    "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.3",
     "fastify": "^5.4.0",
     "ioredis": "^5.7.0",
@@ -46,7 +49,6 @@
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.10",
     "dotenv": "^17.2.1",
-    "drizzle-kit": "^0.31.4",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
