chore: add drizzle to tsdown

--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "build": "tsdown",
     "start": "node dist/server.js",
     "start:dev": "tsx watch src/main/server.ts",
-    "start:prod": "pnpm db:migrate && node dist/server.js",
+    "start:prod": "pnpm db:migrate:prod && node dist/server.js",
     "worker": "node dist/worker.js",
     "worker:dev": "tsx watch src/main/worker.ts",
+    "worker:prod": "pnpm db:migrate:prod && node dist/worker.js",
     "db:migrate": "drizzle-kit migrate",
+    "db:migrate:prod": "drizzle-kit migrate --config=dist/drizzle.config.js",
     "lint": "eslint .",
     "test": "vitest",
     "test:unit": "TEST_ENV=unit vitest run",
