--- a/package.json
+++ b/package.json
@@ -6,14 +6,11 @@
   "type": "module",
   "scripts": {
     "build": "tsdown",
-    "start": "node dist/server.js",
     "start:dev": "tsx watch src/main/server.ts",
-    "start:prod": "pnpm db:migrate:prod && node dist/server.js",
-    "worker": "node dist/worker.js",
+    "start:prod": "node dist/server.js",
     "worker:dev": "tsx watch src/main/worker.ts",
-    "worker:prod": "pnpm db:migrate:prod && node dist/worker.js",
+    "worker:prod": "node dist/worker.js",
     "db:migrate": "drizzle-kit migrate",
-    "db:migrate:prod": "drizzle-kit migrate --config=dist/drizzle.config.js",
     "lint": "eslint .",
     "test": "vitest",
     "test:unit": "TEST_ENV=unit vitest run",
@@ -33,7 +30,6 @@
     "@react-email/components": "^0.5.1",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.58.1",
-    "drizzle-kit": "^0.31.4",
     "drizzle-orm": "^0.44.3",
     "fastify": "^5.4.0",
     "ioredis": "^5.7.0",
@@ -51,6 +47,7 @@
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.10",
     "dotenv": "^17.2.1",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
