--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "packageManager": "pnpm@10.15.0",
   "dependencies": {
     "@fastify/jwt": "^9.1.0",
+    "@fastify/swagger": "^9.5.1",
     "@react-email/components": "^0.5.1",
+    "@scalar/fastify-api-reference": "^1.34.6",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.58.1",
     "drizzle-orm": "^0.44.3",
