--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bullmq": "^5.58.1",
     "drizzle-orm": "^0.44.3",
     "fastify": "^5.4.0",
+    "fastify-type-provider-zod": "^6.0.0",
     "ioredis": "^5.7.0",
     "jose": "^6.0.12",
     "postgres": "^3.4.7",
