--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "packageManager": "pnpm@10.15.0",
   "dependencies": {
     "@fastify/jwt": "^9.1.0",
+    "@fastify/rate-limit": "^10.3.0",
     "@fastify/swagger": "^9.5.1",
     "@react-email/components": "^0.5.1",
     "@scalar/fastify-api-reference": "^1.34.6",
