--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.15.0",
   "dependencies": {
+    "@fastify/helmet": "^13.0.1",
     "@fastify/jwt": "^9.1.0",
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/swagger": "^9.5.1",
@@ -35,6 +36,7 @@
     "bullmq": "^5.58.1",
     "drizzle-orm": "^0.44.3",
     "fastify": "^5.4.0",
+    "fastify-plugin": "^5.0.1",
     "fastify-type-provider-zod": "^6.0.0",
     "ioredis": "^5.7.0",
     "jose": "^6.0.12",
@@ -43,7 +45,7 @@
     "reflect-metadata": "^0.2.2",
     "resend": "^6.0.1",
     "tsyringe": "^4.10.0",
-    "zod": "^4.0.13"
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.31.0",
