--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "test:unit:related": "TEST_ENV=unit vitest related --run",
     "test:integration": "TEST_ENV=integration vitest run",
     "test:integration:watch": "TEST_ENV=integration vitest",
+    "test:e2e": "TEST_ENV=e2e vitest run",
+    "test:e2e:watch": "TEST_ENV=e2e vitest",
     "test:ci": "vitest run",
     "prepare": "husky"
   },
@@ -52,6 +54,7 @@
     "@faker-js/faker": "^9.9.0",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.10",
+    "@types/supertest": "^6.0.3",
     "dotenv": "^17.2.1",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.31.0",
@@ -63,6 +66,7 @@
     "pino-pretty": "^13.1.1",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
+    "supertest": "^7.1.4",
     "tailwindcss": "^3.4.17",
     "tsdown": "^0.14.2",
     "tsx": "^4.20.3",
