test(integration): refactor integration tests to use truncate from vitest setup

--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "test:unit": "TEST_ENV=unit vitest run",
     "test:unit:watch": "TEST_ENV=unit vitest",
     "test:unit:related": "TEST_ENV=unit vitest related --run",
-    "test:integration": "TEST_ENV=integration vitest run --silent",
-    "test:integration:watch": "TEST_ENV=integration vitest --silent",
-    "test:e2e": "TEST_ENV=e2e vitest run --silent",
-    "test:e2e:watch": "TEST_ENV=e2e vitest --silent",
+    "test:integration": "TEST_ENV=integration vitest run",
+    "test:integration:watch": "TEST_ENV=integration vitest",
+    "test:e2e": "TEST_ENV=e2e vitest run",
+    "test:e2e:watch": "TEST_ENV=e2e vitest",
     "test:ci": "vitest run",
     "prepare": "husky"
   },
