--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "test:e2e": "TEST_ENV=e2e vitest run",
     "test:e2e:watch": "TEST_ENV=e2e vitest",
     "test:ci": "vitest run",
+    "test:coverage": "TEST_ENV=unit vitest run --coverage",
     "prepare": "husky"
   },
   "keywords": [],
@@ -55,6 +56,7 @@
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.10",
     "@types/supertest": "^6.0.3",
+    "@vitest/coverage-v8": "^3.2.4",
     "dotenv": "^17.2.1",
     "drizzle-kit": "^0.31.4",
     "eslint": "^9.31.0",
