--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "type": "module",
   "scripts": {
     "build": "tsdown",
-    "start:dev": "tsx watch src/main/server.ts",
-    "start:prod": "node dist/server.js",
-    "worker:dev": "tsx watch src/main/worker.ts",
-    "worker:prod": "node dist/worker.js",
+    "start:dev": "node --watch --import tsx --import ./src/infra/telemetry/index.ts src/main/server.ts",
+    "start:prod": "node --import ./dist/infra/telemetry/index.js dist/server.js",
+    "worker:dev": "node --watch --import tsx --import ./src/infra/telemetry/index.ts src/main/worker.ts",
+    "worker:prod": "node --import ./dist/infra/telemetry/index.js dist/worker.js",
     "db:migrate": "drizzle-kit migrate",
     "lint": "eslint .",
     "test": "vitest",
@@ -33,6 +33,11 @@
     "@fastify/jwt": "^9.1.0",
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/swagger": "^9.5.1",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.64.1",
+    "@opentelemetry/context-async-hooks": "^2.1.0",
+    "@opentelemetry/exporter-prometheus": "^0.205.0",
+    "@opentelemetry/sdk-node": "^0.205.0",
     "@react-email/components": "^0.5.1",
     "@scalar/fastify-api-reference": "^1.34.6",
     "bcryptjs": "^3.0.2",
