--- a/package.json
+++ b/package.json
@@ -31,13 +31,19 @@
   "dependencies": {
     "@fastify/helmet": "^13.0.1",
     "@fastify/jwt": "^9.1.0",
+    "@fastify/otel": "^0.9.4",
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/swagger": "^9.5.1",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.64.1",
     "@opentelemetry/context-async-hooks": "^2.1.0",
     "@opentelemetry/exporter-prometheus": "^0.205.0",
+    "@opentelemetry/instrumentation-http": "^0.205.0",
+    "@opentelemetry/instrumentation-ioredis": "^0.53.3",
+    "@opentelemetry/instrumentation-pg": "^0.58.3",
+    "@opentelemetry/resources": "^2.1.0",
     "@opentelemetry/sdk-node": "^0.205.0",
+    "@opentelemetry/semantic-conventions": "^1.37.0",
     "@react-email/components": "^0.5.1",
     "@scalar/fastify-api-reference": "^1.34.6",
     "bcryptjs": "^3.0.2",
