chore: add coveralls to ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   push:
-    branches: ['main']
+    branches: ["main"]
   pull_request:
 
 jobs:
@@ -10,11 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      DATABASE_URL: 'postgresql://docker:docker@localhost:5433/turbo_recipes_test'
-      JWT_SECRET: 'random'
-      REDIS_URL: 'redis://localhost:6380'
-      RESEND_API_KEY: 'fake-key'
-      MAIL_FROM: 'test@example.com'
+      DATABASE_URL: "postgresql://docker:docker@localhost:5433/turbo_recipes_test"
+      JWT_SECRET: "random"
+      REDIS_URL: "redis://localhost:6380"
+      RESEND_API_KEY: "fake-key"
+      MAIL_FROM: "test@example.com"
 
     permissions:
       contents: read
@@ -30,8 +30,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version-file: '.nvmrc'
-          cache: 'pnpm'
+          node-version-file: ".nvmrc"
+          cache: "pnpm"
 
       - name: Install dependencies
         run: pnpm install
@@ -51,3 +51,8 @@ jobs:
       - name: Report Coverage
         if: always() && github.event_name == 'pull_request'
         uses: davelosert/vitest-coverage-report-action@v2
+
+      - name: Coveralls
+        uses: coverallsapp/github-action@v2
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
