--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ services:
     container_name: grafana
     ports:
       - "3000:3000"
+    volumes:
+      - grafana-data:/var/lib/grafana
     depends_on:
       - prometheus
       - loki
@@ -47,3 +49,4 @@ services:
 volumes:
   pgdata:
   redisdata:
+  grafana-data:
